--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M16 1C7.52829 1 0.666626 7.86167 0.666626 16.3333C0.666626 23.1183 5.05579 28.8492 11.1508 30.8808C11.9175 31.015 12.205 30.555 12.205 30.1525C12.205 29.7883 12.1858 28.5808 12.1858 27.2967C8.33329 28.0058 7.33663 26.3575 7.02996 25.495C6.85746 25.0542 6.10996 23.6933 5.45829 23.3292C4.92163 23.0417 4.15496 22.3325 5.43913 22.3133C6.64663 22.2942 7.50913 23.425 7.79663 23.885C9.17663 26.2042 11.3808 25.5525 12.2625 25.15C12.3966 24.1533 12.7991 23.4825 13.24 23.0992C9.82829 22.7158 6.26329 21.3933 6.26329 15.5283C6.26329 13.8608 6.85746 12.4808 7.83496 11.4075C7.68163 11.0242 7.14496 9.4525 7.98829 7.34417C7.98829 7.34417 9.27246 6.94167 12.205 8.91583C13.4316 8.57083 14.735 8.39833 16.0383 8.39833C17.3416 8.39833 18.645 8.57083 19.8716 8.91583C22.8041 6.9225 24.0883 7.34417 24.0883 7.34417C24.9316 9.4525 24.395 11.0242 24.2416 11.4075C25.2191 12.4808 25.8133 13.8417 25.8133 15.5283C25.8133 21.4125 22.2291 22.7158 18.8175 23.0992C19.3733 23.5783 19.8525 24.4983 19.8525 25.9358C19.8525 27.9867 19.8333 29.635 19.8333 30.1525C19.8333 30.555 20.1208 31.0342 20.8875 30.8808C26.9441 28.8492 31.3333 23.0992 31.3333 16.3333C31.3333 7.86167 24.4716 1 16 1V1Z" fill="currentFill"/>
                         </svg>
                     </a></li>
-                    <li class="header__linked-in"><a href="#!" target="_blank">
-                        <svg width="32" height="32" viewBox="0 0 32 32" fill="white" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="32" height="32" rx="3" fill="currentFill"/>
-                            <path d="M6.33333 2.5C4.76853 2.5 3.5 3.76853 3.5 5.33333C3.5 6.89814 4.76853 8.16667 6.33333 8.16667C7.89814 8.16667 9.16667 6.89814 9.16667 5.33333C9.16667 3.76853 7.89814 2.5 6.33333 2.5Z" fill="#0F1624"/>
-                            <path d="M3.66667 10.5C3.57462 10.5 3.5 10.5746 3.5 10.6667V28C3.5 28.092 3.57462 28.1667 3.66667 28.1667H9C9.09205 28.1667 9.16667 28.092 9.16667 28V10.6667C9.16667 10.5746 9.09205 10.5 9 10.5H3.66667Z" fill="#0F1624"/>
-                            <path d="M12.3333 10.5C12.2413 10.5 12.1667 10.5746 12.1667 10.6667V28C12.1667 28.092 12.2413 28.1667 12.3333 28.1667H17.6667C17.7587 28.1667 17.8333 28.092 17.8333 28V18.6667C17.8333 18.0036 18.0967 17.3677 18.5656 16.8989C19.0344 16.4301 19.6703 16.1667 20.3333 16.1667C20.9964 16.1667 21.6323 16.4301 22.1011 16.8989C22.5699 17.3677 22.8333 18.0036 22.8333 18.6667V28C22.8333 28.092 22.908 28.1667 23 28.1667H28.3333C28.4254 28.1667 28.5 28.092 28.5 28V16.507C28.5 13.2713 25.6859 10.74 22.4665 11.0327C21.4736 11.1229 20.4919 11.3697 19.5753 11.7626L17.8333 12.5091V10.6667C17.8333 10.5746 17.7587 10.5 17.6667 10.5H12.3333Z" fill="#0F1624"/>
+                    <li class="header__linked-in"><a href="https://t.me/Rictiiiie" target="_blank">
+                        <svg fill="white" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M22.122 10.040c0.006-0 0.014-0 0.022-0 0.209 0 0.403 0.065 0.562 0.177l-0.003-0.002c0.116 0.101 0.194 0.243 0.213 0.403l0 0.003c0.020 0.122 0.031 0.262 0.031 0.405 0 0.065-0.002 0.129-0.007 0.193l0-0.009c-0.225 2.369-1.201 8.114-1.697 10.766-0.21 1.123-0.623 1.499-1.023 1.535-0.869 0.081-1.529-0.574-2.371-1.126-1.318-0.865-2.063-1.403-3.342-2.246-1.479-0.973-0.52-1.51 0.322-2.384 0.221-0.23 4.052-3.715 4.127-4.031 0.004-0.019 0.006-0.040 0.006-0.062 0-0.078-0.029-0.149-0.076-0.203l0 0c-0.052-0.034-0.117-0.053-0.185-0.053-0.045 0-0.088 0.009-0.128 0.024l0.002-0.001q-0.198 0.045-6.316 4.174c-0.445 0.351-1.007 0.573-1.619 0.599l-0.006 0c-0.867-0.105-1.654-0.298-2.401-0.573l0.074 0.024c-0.938-0.306-1.683-0.467-1.619-0.985q0.051-0.404 1.114-0.827 6.548-2.853 8.733-3.761c1.607-0.853 3.47-1.555 5.429-2.010l0.157-0.031zM15.93 1.025c-8.302 0.020-15.025 6.755-15.025 15.060 0 8.317 6.742 15.060 15.060 15.060s15.060-6.742 15.060-15.060c0-8.305-6.723-15.040-15.023-15.060h-0.002q-0.035-0-0.070 0z">
+                            </path>
                         </svg>
                     </a></li>
                     <li class="header__figma"><a href="https://www.figma.com/@letharic" target="_blank">
@@ -73,7 +72,7 @@
                         <div>
                             <img src="img/project-img-1.png" alt="">
                             <h3>Velocity layout</h3>
-                            <p>Lorem ipsum eligendi similique. Aboba aboba lorem aboba aboba baobab emiya shirou</p>
+                            <p>Velocity layout that looks calm and harmonic could increase your product usage</p>
                         </div>
                         <div>
                             <a target="_blank" href="projects/velocity/index.html" class="button">Learn more</a>
@@ -83,11 +82,31 @@
                         <div>
                             <img src="img/project-img-2.png" alt="">
                             <h3>Pet shop</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, in dignissimos quibusdam possimus quo quae quas quisquam ut ducimus maxime doloremque incidunt accusamus illum totam quos unde et eligendi similique.</p>
+                            <p>Calm and harmonic pet shop design</p>
                         </div>
                         <div>
                             <a target="_blank" href="projects/petshop/index.html" class="button">Learn more</a>
                         </div>             
+                    </div>
+                    <div class="project">
+                        <div>
+                            <img src="img/project-img-3.png" alt="">
+                            <h3>React Pizza</h3>
+                            <p>Pizza delivery service that could increase your sells</p>
+                        </div>
+                        <div>
+                            <a target="_blank" href="../ReactPizza" class="button">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div>
+                            <img src="img/project-img-4.png" alt="">
+                            <h3>Currency Exchange</h3>
+                            <p>Currency exchange service you can integrate in your messenger or bank app</p>
+                        </div>
+                        <div>
+                            <a target="_blank" href="../CurrencyExchange" class="button">Learn more</a>
+                        </div>
                     </div>
                 </div>   
             </div>
@@ -195,12 +214,11 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M16 1C7.52829 1 0.666626 7.86167 0.666626 16.3333C0.666626 23.1183 5.05579 28.8492 11.1508 30.8808C11.9175 31.015 12.205 30.555 12.205 30.1525C12.205 29.7883 12.1858 28.5808 12.1858 27.2967C8.33329 28.0058 7.33663 26.3575 7.02996 25.495C6.85746 25.0542 6.10996 23.6933 5.45829 23.3292C4.92163 23.0417 4.15496 22.3325 5.43913 22.3133C6.64663 22.2942 7.50913 23.425 7.79663 23.885C9.17663 26.2042 11.3808 25.5525 12.2625 25.15C12.3966 24.1533 12.7991 23.4825 13.24 23.0992C9.82829 22.7158 6.26329 21.3933 6.26329 15.5283C6.26329 13.8608 6.85746 12.4808 7.83496 11.4075C7.68163 11.0242 7.14496 9.4525 7.98829 7.34417C7.98829 7.34417 9.27246 6.94167 12.205 8.91583C13.4316 8.57083 14.735 8.39833 16.0383 8.39833C17.3416 8.39833 18.645 8.57083 19.8716 8.91583C22.8041 6.9225 24.0883 7.34417 24.0883 7.34417C24.9316 9.4525 24.395 11.0242 24.2416 11.4075C25.2191 12.4808 25.8133 13.8417 25.8133 15.5283C25.8133 21.4125 22.2291 22.7158 18.8175 23.0992C19.3733 23.5783 19.8525 24.4983 19.8525 25.9358C19.8525 27.9867 19.8333 29.635 19.8333 30.1525C19.8333 30.555 20.1208 31.0342 20.8875 30.8808C26.9441 28.8492 31.3333 23.0992 31.3333 16.3333C31.3333 7.86167 24.4716 1 16 1V1Z" fill="currentFill"/>
                     </svg>
                 </a></li>
-                <li class="footer__linked-in"><a href="#!" target="_blank">
-                    <svg width="32" height="32" viewBox="0 0 32 32" fill="white" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="32" height="32" rx="3" fill="currentFill"/>
-                        <path d="M6.33333 2.5C4.76853 2.5 3.5 3.76853 3.5 5.33333C3.5 6.89814 4.76853 8.16667 6.33333 8.16667C7.89814 8.16667 9.16667 6.89814 9.16667 5.33333C9.16667 3.76853 7.89814 2.5 6.33333 2.5Z" fill="#0F1624"/>
-                        <path d="M3.66667 10.5C3.57462 10.5 3.5 10.5746 3.5 10.6667V28C3.5 28.092 3.57462 28.1667 3.66667 28.1667H9C9.09205 28.1667 9.16667 28.092 9.16667 28V10.6667C9.16667 10.5746 9.09205 10.5 9 10.5H3.66667Z" fill="#0F1624"/>
-                        <path d="M12.3333 10.5C12.2413 10.5 12.1667 10.5746 12.1667 10.6667V28C12.1667 28.092 12.2413 28.1667 12.3333 28.1667H17.6667C17.7587 28.1667 17.8333 28.092 17.8333 28V18.6667C17.8333 18.0036 18.0967 17.3677 18.5656 16.8989C19.0344 16.4301 19.6703 16.1667 20.3333 16.1667C20.9964 16.1667 21.6323 16.4301 22.1011 16.8989C22.5699 17.3677 22.8333 18.0036 22.8333 18.6667V28C22.8333 28.092 22.908 28.1667 23 28.1667H28.3333C28.4254 28.1667 28.5 28.092 28.5 28V16.507C28.5 13.2713 25.6859 10.74 22.4665 11.0327C21.4736 11.1229 20.4919 11.3697 19.5753 11.7626L17.8333 12.5091V10.6667C17.8333 10.5746 17.7587 10.5 17.6667 10.5H12.3333Z" fill="#0F1624"/>
+                <li class="footer__linked-in"><a href="https://t.me/Rictiiiie" target="_blank">
+                    <svg fill="white" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M22.122 10.040c0.006-0 0.014-0 0.022-0 0.209 0 0.403 0.065 0.562 0.177l-0.003-0.002c0.116 0.101 0.194 0.243 0.213 0.403l0 0.003c0.020 0.122 0.031 0.262 0.031 0.405 0 0.065-0.002 0.129-0.007 0.193l0-0.009c-0.225 2.369-1.201 8.114-1.697 10.766-0.21 1.123-0.623 1.499-1.023 1.535-0.869 0.081-1.529-0.574-2.371-1.126-1.318-0.865-2.063-1.403-3.342-2.246-1.479-0.973-0.52-1.51 0.322-2.384 0.221-0.23 4.052-3.715 4.127-4.031 0.004-0.019 0.006-0.040 0.006-0.062 0-0.078-0.029-0.149-0.076-0.203l0 0c-0.052-0.034-0.117-0.053-0.185-0.053-0.045 0-0.088 0.009-0.128 0.024l0.002-0.001q-0.198 0.045-6.316 4.174c-0.445 0.351-1.007 0.573-1.619 0.599l-0.006 0c-0.867-0.105-1.654-0.298-2.401-0.573l0.074 0.024c-0.938-0.306-1.683-0.467-1.619-0.985q0.051-0.404 1.114-0.827 6.548-2.853 8.733-3.761c1.607-0.853 3.47-1.555 5.429-2.010l0.157-0.031zM15.93 1.025c-8.302 0.020-15.025 6.755-15.025 15.060 0 8.317 6.742 15.060 15.060 15.060s15.060-6.742 15.060-15.060c0-8.305-6.723-15.040-15.023-15.060h-0.002q-0.035-0-0.070 0z">
+                        </path>
                     </svg>
                 </a></li>
                 <li class="footer__figma"><a href="https://www.figma.com/@letharic" target="_blank">
