--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
                     <div class="technology">
                         <div class="technology__title">
                             <div class="technology__name">ReactJS</div>
-                            <div class="technology__level">Learning</div>
+                            <div class="technology__level">Beginner</div>
                         </div>
                         <div class="technology__bar bar_25"></div>
                     </div>
                     <div class="technology">
                         <div class="technology__title">
                             <div class="technology__name">UI/UX Design</div>
-                            <div class="technology__level">Learning</div>
+                            <div class="technology__level">Beginner</div>
                         </div>
                         <div class="technology__bar bar_25"></div>
                     </div>
@@ -181,24 +181,24 @@
                 <h2 class="about-me__title">About me</h2>
                 <div class="hronology_wrapper">
                     <div class="hronology hronology-1">
-                        <h4>2018</h4>
-                        <div class="hronology__decoration"></div>
-                        <p class="hronology__description">Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. </p>
-                    </div>
-                    <div class="hronology hronology-2">
-                        <h4>2019</h4>
-                        <div class="hronology__decoration"></div>
-                        <p class="hronology__description">Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. </p>
-                    </div>
-                    <div class="hronology hronology-3">
-                        <h4>2020</h4>
-                        <div class="hronology__decoration"></div>
-                        <p class="hronology__description">Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. </p>
-                    </div>
-                    <div class="hronology hronology-4">
                         <h4>2021</h4>
                         <div class="hronology__decoration"></div>
-                        <p class="hronology__description">Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. Lorem ispum sin tarelka man aaa bbb ccc. </p>
+                        <p class="hronology__description">First steps in learning Python</p>
+                    </div>
+                    <div class="hronology hronology-2">
+                        <h4>2022</h4>
+                        <div class="hronology__decoration"></div>
+                        <p class="hronology__description">More advanced Python earning</p>
+                    </div>
+                    <div class="hronology hronology-3">
+                        <h4>2023</h4>
+                        <div class="hronology__decoration"></div>
+                        <p class="hronology__description">Learning HTML and CSS</p>
+                    </div>
+                    <div class="hronology hronology-4">
+                        <h4>2024</h4>
+                        <div class="hronology__decoration"></div>
+                        <p class="hronology__description">Learning JS and ReactJS</p>
                     </div>
                 </div>
             </div>
